# pyLEEM-GUI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  THIRD_PARTY_LICENSES  pyproject.toml
.github/: pull_request_template.md
.github/issue_template/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: docs.yml  tests.yml
docs/: Makefile  NOTICE.md  THIRD_PARTY_LICENSES.md  api.md  conf.py  design.md  index.md
docs/plugins/: index.md
pyleem_gui/: app.py  image.py  metadata.py  process.py  processbar.py  readers.py  roi.py  session.py  view.py  viewer.py
pyleem_gui/plugins/: __init__.py  builtin.py  builtin_roi.py  builtin_roi_editors.py  discovery.py  host.py  line_profile.py  metadata.py  spec.py  stack_profile.py
pyleem_gui/ui/: __init__.py  processbar.py  viewer.py
tests/: conftest.py  support.py  test_app.py  test_image.py  test_metadata.py  test_process.py  test_readers.py
tests/plugins/: conftest.py  test_builtin.py  test_builtin_roi.py  test_builtin_roi_editors.py  test_discovery.py  test_host.py  test_line_profile.py  test_metadata.py  test_spec.py  test_stack_profile.py
tests/ui/: conftest.py  test_processbar.py  test_viewer.py
